2006-05-08 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks10
	* info/patches/ck_server_patches/patch-2.6.16-cks10: added

2006-05-08 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck10
	* info/patches/ck_patches/patch-2.6.16-ck10: added

2006-05-06 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.14
	* info/patches/maintenance_patches/patch-2.6.16.14: added

2006-05-03 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.13
	* info/patches/maintenance_patches/patch-2.6.16.13: added

2006-05-02 David Brown <dmlb2000@gmail.com>
        * info/patches/sws2_patches/suspend2-2.2.5-for-2.6.16.9.patch: added

2006-05-02 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks9
	* info/patches/ck_server_patches/patch-2.6.16-cks9: added

2006-05-02 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck9
	* info/patches/ck_patches/patch-2.6.16-ck9: added

2006-05-01 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-rt18
	* info/patches/realtime_patches/patch-2.6.16-rt18: added

2006-05-01 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16.12
	* info/patches/maintenance_patches/patch-2.6.16.12: added

2006-05-01 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.17-rc3-mm1
	* info/patches/mm_patches/2.6.17-rc3-mm1: added

2006-04-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks8
	* info/patches/ck_server_patches/patch-2.6.16-cks8: added

2006-04-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-ck8
	* info/patches/ck_patches/patch-2.6.16-ck8: added

2006-04-27 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.16-cks7
	* info/patches/ck_server_patches/patch-2.6.16-cks7: added
