@@ -1,4 +1,7 @@
 2006-05-08 David Brown <dmlb2000@gmail.com>
+	* info/patches/reiser4_patches/reiser4-for-2.6.16-2.patch: added
+
+2006-05-08 David Brown <dmlb2000@gmail.com>
 	* latest.defaults: updated latest to patch-2.6.16-cks10
 	* info/patches/ck_server_patches/patch-2.6.16-cks10: added
 
